force-app/main/default/objects/pse__Resource_Request__c/fields/ES_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>ES_Manager_Email__c</fullName>
    <label>ES Manager Email</label>
    <type>Email</type>
</CustomField>