force-app/main/default/objects/pse__Resource_Request__c/fields/PS_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>PS_Manager_Email__c</fullName>
    <description>Display&apos;s the PS Manager&apos;s Email Address.  Set equal to the Project PS Manager Email Field.</description>
    <label>PS Manager Email</label>
    <type>Email</type>
</CustomField>