force-app/main/default/objects/pse__Resource_Request__c/fields/pse__AccountId__c.field-meta.xml
<CustomField>
    <fullName>pse__AccountId__c</fullName>
    <description>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</description>
    <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;)),
pse__Opportunity__r.AccountId,
IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;)),pse__Project__r.pse__Account__c,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</inlineHelpText>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>