force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Average_Cost_Rate_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
    <label>Average Cost Rate Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>