force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Eligible_for_Schedule_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Eligible_for_Schedule_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Schedule Recalculation</label>
    <type>Checkbox</type>
</CustomField>