force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Planned_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Planned_Bill_Rate__c</fullName>
    <description>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</description>
    <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
    <label>Planned Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>