force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Primary_Skill_Minimum_Rating__c.field-meta.xml
<CustomField>
    <fullName>pse__Primary_Skill_Minimum_Rating__c</fullName>
    <description>Added to simplify reports. Not intended for editing.</description>
    <label>Primary Skill Minimum Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>