force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Request_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Request_Billable_Amount__c</fullName>
    <formula>pse__Requested_Bill_Rate__c *  pse__SOW_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>