force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Staffer_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Staffer_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staffer Approval Required</label>
    <type>Checkbox</type>
</CustomField>