force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Work_City_PSA__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_City_PSA__c</fullName>
    <label>Work City (PSA)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>