force-app/main/default/objects/pse__Resource_Request__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <formula>pse__Project__r.pse__Is_Template__c</formula>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>