force-app/main/default/objects/pse__Resource_Request__c/validationRules/Billable_Rate_has_to_be_0_Fixed_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_Rate_has_to_be_0_Fixed_Price</fullName>
    <active>false</active>
    <description>For fixed fee projects, the bill rate has to be zero.</description>
    <errorConditionFormula>AND( 
  ISPICKVAL(pse__Project__r.pse__Billing_Type__c,&quot;Fixed Price&quot;), 
  ISPICKVAL(pse__Project__r.pse__Project_Type__c, &quot;Customer Project&quot;),
  OR(
    NOT(pse__Requested_Bill_Rate__c=0),
    NOT(ISBLANK(pse__Requested_Bill_Rate__c))
  )
)</errorConditionFormula>
    <errorDisplayField>pse__Requested_Bill_Rate__c</errorDisplayField>
    <errorMessage>For fixed fee projects, the bill rate has to be zero.</errorMessage>
</ValidationRule>