force-app/main/default/objects/pse__Resource_Request__c/validationRules/Blended_Projects_Bill_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Blended_Projects_Bill_Rate</fullName>
    <active>false</active>
    <description>For blended projects, the bill rate my only be zero for non Engagement Manager resource roles.</description>
    <errorConditionFormula>AND(
   ISPICKVAL(pse__Project__r.pse__Billing_Type__c,&quot;Blended&quot;), 
   ISPICKVAL(pse__Resource_Role__c, &quot;Engagement Manager&quot;),
   OR(
     pse__Requested_Bill_Rate__c=0,
     ISBLANK(pse__Requested_Bill_Rate__c)
   ),
   ISPICKVAL(pse__Project__r.pse__Project_Type__c, &quot;Customer Project&quot;)
)</errorConditionFormula>
    <errorDisplayField>pse__Requested_Bill_Rate__c</errorDisplayField>
    <errorMessage>For blended projects, the bill rate my only be zero for non Engagement Manager resource roles.</errorMessage>
</ValidationRule>