force-app/main/default/objects/pse__Resource_Request__c/validationRules/pse__hours_required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__hours_required</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISNULL(pse__SOW_Hours__c), pse__SOW_Hours__c &lt;=0)</errorConditionFormula>
    <errorDisplayField>pse__SOW_Hours__c</errorDisplayField>
    <errorMessage>Requested Hours is required</errorMessage>
</ValidationRule>