force-app/main/default/objects/pse__Resource_Request__c/validationRules/pse__ZZZ_test.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__ZZZ_test</fullName>
    <active>false</active>
    <errorConditionFormula>pse__Percent_Allocated__c  &gt; 0.70</errorConditionFormula>
    <errorMessage>Percentage is greater than 70.</errorMessage>
</ValidationRule>