force-app/main/default/objects/pse__Resource_Request__c/validationRules/Requested_hours_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_hours_required</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Profile.Id=&quot;00e30000000bvR3&quot;)&amp;&amp;
OR(ISNULL(pse__SOW_Hours__c), pse__SOW_Hours__c &lt;0)</errorConditionFormula>
    <errorMessage>Please fill in a valid number for requested hours</errorMessage>
</ValidationRule>