force-app/main/default/objects/pse__Resource_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pse__Request_Priority__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Primary_Skill_Certification__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource_Held__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/1/2014</value>
    </filters>
    <filters>
        <field>pse__Assignment__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>