force-app/main/default/objects/pse__Resource_Request__c/listViews/All_Not_Assigned.listView-meta.xml
<ListView>
    <fullName>All_Not_Assigned</fullName>
    <columns>NAME</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Primary_Skill_Certification__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource_Held__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <columns>pse__Request_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Assigned,Cancelled</value>
    </filters>
    <filters>
        <field>pse__Project__c</field>
        <operation>notContain</operation>
        <value>Template</value>
    </filters>
    <label>All - Not Assigned</label>
    <language>en_US</language>
</ListView>