force-app/main/default/objects/pse__Resource_Request__c/listViews/EMEA_Assignments.listView-meta.xml
<ListView>
    <fullName>EMEA_Assignments</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>emea</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Assigned</value>
    </filters>
    <label>EMEA Assignments</label>
</ListView>