force-app/main/default/objects/pse__Resource_Request__c/listViews/Risk_Solution_Engineer_Not_Assigned.listView-meta.xml
<ListView>
    <fullName>Risk_Solution_Engineer_Not_Assigned</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
    <columns>NAME</columns>
    <columns>psa_report__Project_Name__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Assigned</value>
    </filters>
    <filters>
        <field>pse__Resource_Role__c</field>
        <operation>equals</operation>
        <value>Solution Engineer</value>
    </filters>
    <filters>
        <field>psa_report__Project_Name__c</field>
        <operation>notContain</operation>
        <value>Template</value>
    </filters>
    <filters>
        <field>pse__Practice__c</field>
        <operation>contains</operation>
        <value>Wall,Open,Integration</value>
    </filters>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>North America</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Project_Manager__c</field>
        <operation>notEqual</operation>
        <value>Brian Lynch</value>
    </filters>
    <label>Risk Solution Engineer - Not Assigned</label>
    <language>en_US</language>
</ListView>