force-app/main/default/objects/pse__Resource_Request__c/listViews/Solution_Engineer_Not_Assigned.listView-meta.xml
<ListView>
    <fullName>Solution_Engineer_Not_Assigned</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Project__c</columns>
    <columns>psa_report__Project_Name__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Assigned</value>
    </filters>
    <filters>
        <field>pse__Resource_Role__c</field>
        <operation>equals</operation>
        <value>Solution Engineer</value>
    </filters>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Solution Engineer - Not Assigned</label>
</ListView>